# projects_api_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/languages/: model.rs  routes.rs
src/tools/: model.rs  routes.rs
src/utils/: database.rs  mod.rs
