[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
dotenv = "0.15.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
derive_more = "0.99.17"
futures = "0.3.30"
async-trait = "0.1.77"
mongodb = "2.8.1"
actix-cors = "0.7.0"
